llvm-gcc-4.2-2.9/gcc/testsuite/obj-c++.dg/objc-neg-selector.mm
/* APPLE LOCAL file radar 5409313 */
/* { dg-do compile } */


typedef struct objc_selector *SEL;

SEL sel;

void foo ()
{
    sel = @selector(); /* { dg-error "method name missing in @selector" } */
}
